--- a/footer.css
+++ b/footer.css
@@ -39,7 +39,7 @@
       }
       .cols > h2 {
         font-size: 26px;
-        text-align: center;
+        text-align: left;
         color: white;
       }
       .cols > a {
