--- a/Sidebar/sidebar.css
+++ b/Sidebar/sidebar.css
@@ -1,6 +1,6 @@
 #sideBar{
     width: 15%;
-    height: 615px;
+    height: auto;
     border: 1px solid red;
     font-family: 'Lucida Sans', 'Lucida Sans Regular', 'Lucida Grande', 'Lucida Sans Unicode', Geneva, Verdana, sans-serif;
 }
@@ -8,9 +8,9 @@
 
 
 #sidebarBox{
-    height: 615px;
+    height: auto;
     width: 100%;
-    border: 1px solid red;
+    /* border: 1px solid red; */
     margin: auto;
     /* margin-top: 60px; */
 }
@@ -30,7 +30,7 @@
     box-sizing: border-box;
 }
 #accmainbox{
-    border: 1px solid red;
+    /* border: 1px solid red; */
     height: auto;
     width: 100%;
     margin: auto;
