--- a/style/profile.css
+++ b/style/profile.css
@@ -12,23 +12,22 @@ html { font-family: 'Inter', sans-serif; }
 }
 
 .profile_main_pg{
-    height: 100vh;
+    height: auto;
     width: 100%;
-    display: grid;
-    grid-template-columns: 15% 85%;
+    display: flex;
 }
-.side_nav, .prfl_body_pad{
-    border: 1px solid red;
+.prfl_body_pad{
+    width: 100%;
 }
 .body_content{
     height: 100%;
-    max-width: 720px;
-    padding: 2rem;
+    padding: 2rem 12rem;
     padding-bottom: 5rem;
     margin-right: auto;
     margin-left: auto;
     /* border: 1px solid blue; */
 }
+
 .profile_text{
     font-size: 2.5rem;
     font-weight: 500;
@@ -216,13 +215,15 @@ html { font-family: 'Inter', sans-serif; }
 
 @media (min-width: 720px) and (max-width: 950px) {
     .body_content{
-        max-width: 520px;
+        max-width: 80%;
         padding: 2rem;
     }
 }
 @media (min-width: 350px) and (max-width: 719px) {
     .body_content{
-        max-width: 300px;
+        max-width: 80%;
         padding: 2rem;
     }
 }
+
+
