--- a/style/signup.css
+++ b/style/signup.css
@@ -10,7 +10,7 @@
     display: flex;
 }
 .container_form{
-    height: 100vh;
+    height: auto;
     width: 560px;
     display: block;
     margin: auto;
