--- a/Learn about Project/learn.css
+++ b/Learn about Project/learn.css
@@ -1,6 +1,16 @@
+@import url('https://rsms.me/inter/inter.css');
+html { font-family: 'Inter', sans-serif; }
+@supports (font-variation-settings: normal) {
+  html { font-family: 'Inter var', sans-serif; }
+}
+
 *{
     margin: 0;
     padding: 0;
+    /* font-family: "proxima-nova", "Helvetica Neue", Helvetica, Arial, sans-serif; */
+}
+.backgroundColorBody{
+    background: #f3f5f7;
 }
 #topDiv{
     width: 100%;
@@ -8,6 +18,12 @@
     box-sizing: border-box;
     padding: 10px 220px;
     background-color: #3B8FC2;
+    margin-bottom: 35px;
+    
+
+}
+#topTohhle{
+    margin-bottom: 20px;
 }
 #mainflex{
     display: flex;
@@ -52,4 +68,305 @@
 }
 #nad>input::placeholder{
     color: rgba(255, 255, 255, 0.7);
+}
+
+#bottomDiv{
+    /*  */
+    /* border: 1px solid red; */
+    margin: auto;
+    width: 68%;
+    height: auto;
+    background: #f3f5f7;
+
+}
+#bottomDiv>p{
+    color: #4f5e6b;
+    text-decoration: none;
+    font-size: 14px;
+    /* font-family: "proxima-nova", "Helvetica Neue", Helvetica, Arial, sans-serif; */
+    margin-bottom: 20px;
+}
+#bottominsidediv{
+    width: 98%;
+    margin: auto;
+    height: auto;
+    padding: 35px 80px;
+    box-sizing: border-box;
+    /* border: 1px solid red; */
+    border-radius: 5px;
+    background: white;
+}
+#bottominsidediv>h1{
+    font-size:34px;
+    line-height: 1.24;
+    font-weight: normal;
+    color: #3a3c4c;
+    /* font-family: "proxima-nova", "Helvetica Neue", Helvetica, Arial, sans-serif; */
+}
+#bottominsidediv>h1+p{
+    font-size: 20px;
+    line-height: 1.35;
+    margin-bottom: 17px;
+    color: #8F919D;
+}
+#ladyimage{
+    width: 40%;
+    height:50px;
+    /* border: 1px solid red; */
+    display: flex;
+
+}
+#ladyimage>div{
+    /* border: 1px solid red; */
+    width: 20%;
+    
+}
+#ladyimage>div>p{
+    margin-left: 10px;
+font-size: 13px;
+color: #4f5e6b;
+line-height: 1.4;
+/* font-family: "proxima-nova", "Helvetica Neue", Helvetica, Arial, sans- */
+}
+#ladyimage>div>p>span{
+    font-weight: 600;
+    color: #3B8FC2;
+}
+#ladyimage>div>img{
+    display: block;
+    margin: auto;
+    width: 80%;
+    height: 90%;
+    border-radius: 50%;
+}
+#ladyimage>div:last-child{
+    /* border: 1px solid red; */
+    width: 80%;
+}
+#itagbtag>a{
+    color:  #3B8FC2;
+    text-decoration: underline;
+}
+#itagbtag{
+    /* font-family: "proxima-nova", "Helvetica Neue", Helvetica, Arial, sans-serif; */
+    font-weight: 400;
+    line-height: 1.53;
+    box-sizing: inherit;
+    font-style: italic;
+    font-size: 17px;
+    margin-top: 25px;
+    color: #565867;
+    /* white-space: pre-wrap; */
+    white-space: break-spaces;
+    word-wrap: break-word;
+}
+iframe{
+    /* border: 1px solid red; */
+    width: 100%;
+    height: 370px;
+    margin: auto;
+    margin-top: 30px;
+    margin-bottom: 55px;
+}
+iframe+p{
+    /* font-family: "proxima-nova", "Helvetica Neue", Helvetica, Arial, sans-serif; */
+    font-weight: 400;
+    line-height: 1.53;
+    color: #565867;
+    margin-bottom: 20px;
+}
+iframe+p>a{
+    color:  #3B8FC2;
+    text-decoration: underline;
+}
+#Billablesettings{
+    /* font-family: "proxima-nova", "Helvetica Neue", Helvetica, Arial, sans-serif; */
+    color: #3a3c4c;
+    margin-bottom: 20px;
+}
+#Billablesettings+p{
+    /* font-family: "proxima-nova", "Helvetica Neue", Helvetica, Arial, sans-serif; */
+    font-weight: 400;
+    line-height: 1.53;
+    color: #565867;
+    margin-bottom: 20px;
+}
+#Billablesettings+p+img{
+    display: block;
+    margin: auto;
+    width: 100%;
+    height: 300px;
+    margin-bottom: 80px;
+}
+#pointTagP>ol>li>p>span{
+    font-weight: 600;
+    
+}
+#pointTagP>ol>li>p{
+    line-height: 25px;
+    font-size: 17px;
+}
+#pointTagP{
+    /* font-family: "proxima-nova", "Helvetica Neue", Helvetica, Arial, sans-serif; */
+    
+    max-width: 100%;vertical-align: middle;
+    margin-bottom: 34px;
+    /* font-weight: 400; */
+}
+#pointTagP>ol{
+    margin-bottom: 35px;
+}
+.roundingOfTime{
+    /* font-family: "proxima-nova", "Helvetica Neue", Helvetica, Arial, sans-serif; */
+    font-size: 22px;
+    /* margin: 0 0 17px; */
+    line-height: 1.24;
+    margin-top: 25px;
+    margin-bottom: 35px;
+}
+.roundingOfTime+p{
+    margin-bottom: 35px;
+}
+.paraYouCan{
+    /* font-family: "proxima-nova", "Helvetica Neue", Helvetica, Arial, sans-serif; */
+    margin-bottom: 25px;
+    min-height: 1.53em;
+    font-size: 17px;
+    color: #565867;
+    line-height: 1.53;
+}
+#imagesecond{
+    display: block;
+    margin: auto;
+    max-width: 100%;
+}
+#roundingOfTime+p{
+    min-height: 1.53em;
+    font-size: 17px;
+    color: #565867;
+    line-height: 1.53;
+}
+.linkingPage>a{
+    color: #3B8FC2;
+    font-style: italic;
+    font-size: 17px;
+    /* text-decoration: none; */
+}
+.linkingPage+p{
+    margin-top: 20px;
+}
+#tasks1{
+    margin-top: 20px;
+}
+.imageThird{
+    max-width: 100%;
+    display: block;
+    margin: auto;
+    margin-bottom: 25px;
+}
+.classBlu{
+    color: #3B8FC2;
+    text-decoration: none;
+
+}
+.classBlu:hover{
+text-decoration: underline;
+}
+.idBlu{
+    color: #3B8FC2;
+    text-decoration: underline;
+    cursor: pointer;
+}
+.idBlu:hover{
+    color: #3B8FC2;
+    text-decoration: none;
+}
+.abch2{
+    /* font-family: "proxima-nova", "Helvetica Neue", Helvetica, Arial, sans-serif; */
+    font-size: 18px;
+    /* margin: 0 0 17px; */
+    line-height: 1.24;
+    margin-top: 25px;
+    margin-bottom: 35px;
+}
+#emojiDiv{
+    width: 100%;
+    margin: auto;
+    height: auto;
+    padding: 20px 80px;
+    box-sizing: border-box;
+    /* border: 1px solid red; */
+    border-radius: 10px;
+    background: #f3f5f7;
+}
+#emojiDiv>p{
+    text-align: center;
+}
+#emoji{
+    margin: auto;
+    display: flex;
+    align-items: center;
+    justify-content: center;
+    gap: 20px;
+    margin-top: 10px;
+    box-sizing: border-box;
+}
+.emojiesSiZe{
+    width: 45px;
+    height: 45px;
+}
+.emojiesSiZe:hover{
+    width: 65px;
+    height: 65px;
+}
+#bottommyHour{
+    height: 250px;
+    width: 100%;
+    /* border: 1px solid red; */
+    box-sizing: border-box;
+    padding: 45px 250px;
+    background: rgb(233, 233, 233);
+    margin-top: 45px;
+}
+#bottommyHour>img{
+    
+    display: block;
+    margin: auto;
+    height: 15px;
+    height: 40px;
+    
+}
+#gotohomepage{
+    margin: auto;
+    display: flex;
+    align-items: center;
+    justify-content: space-evenly;
+    /* border: 1px solid red; */
+    width: 50%;
+    height: 25px;
+    margin-top: 25px;
+
+}
+.gotohomePara>a{
+    color: #909aa5;
+    text-decoration: none;
+    list-style-type: none;
+    font-size: 14px;
+    /* font-family: "proxima-nova", "Helvetica Neue", Helvetica, Arial, sans-serif; */
+    font-weight: 500;
+}
+#socialmedia{
+    margin: auto;
+    display: flex;
+    align-items: center;
+    justify-content: space-between;
+    /* border: 1px solid red; */
+    width: 8%;
+    height: 25px;
+}
+#socialmedia>p{
+    /* text-align: center; */
+    font-size: 20px;
+    text-align: center;
+    color: black;
 }
