--- a/Sidebar/sidebar.css
+++ b/Sidebar/sidebar.css
@@ -36,6 +36,7 @@ html { font-family: 'Inter', sans-serif; }
     line-height: 1.5;
     color: #212529;
     text-align: left;
+    background-color: #f8f9fa;
     /* margin: auto; */
     /* margin-top: 60px; */
 }
